fix index page overflow

--- a/src/main/resources/static/css/AppCss.css
+++ b/src/main/resources/static/css/AppCss.css
@@ -15,5 +15,6 @@ header {
 
 /* Standardizzazione delle immagini delle pizze */
 .pizzapic {
-  max-width: 150px;
+  max-width: 100px;
+  height: 100px;
 }
